Fix tab alignment

--- a/app/assets/stylesheets/_tabs.sass
+++ b/app/assets/stylesheets/_tabs.sass
@@ -51,6 +51,7 @@ form .tabs-content .content
   border-bottom-left-radius: 0 !important
   background: $color-white !important
   border-bottom: 5px solid darken($color-blue-3, 0%)
+  clear: both
 
   li.ui-state-default
     background: $color-blue-2 !important
